--- a/eurekasvr/pom.xml
+++ b/eurekasvr/pom.xml
@@ -3,12 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>cn.qixqi.pan</groupId>
-  <artifactId>eureka-service</artifactId>
+  <artifactId>eurekasvr</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>eureka-service</name>
-  <description>Eureka Service</description>
+  <name>eurekasvr</name>
+  <description>Eureka Server</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
