--- a/test-service/pom.xml
+++ b/test-service/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.qixqi.pan</groupId>
-    <artifactId>user-service</artifactId>
+    <artifactId>testservice</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>user-service</name>
-    <description>User Service</description>
+    <name>test-service</name>
+    <description>Test Service</description>
 
     <!-- 父依赖 -->
     <parent>
@@ -31,23 +31,10 @@
         </dependencies>
     </dependencyManagement>
 
-
-    <!-- 引入所需依赖 -->
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.23</version>
         </dependency>
 
         <dependency>
@@ -60,11 +47,11 @@
             <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
 
-        <!--Spring Cloud2020 需要引入该jar才能使bootstrap配置文件生效-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
@@ -74,16 +61,13 @@
         </dependency>
     </dependencies>
 
-
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <start-class>cn.qixqi.pan.user.UserApplication</start-class>
+        <start-class>cn.qixqi.pan.test.Application</start-class>
     </properties>
-
 
     <build>
         <plugins>
