--- a/confsvr/pom.xml
+++ b/confsvr/pom.xml
@@ -50,6 +50,14 @@
       <artifactId>spring-cloud-starter-bootstrap</artifactId>
     </dependency>
 
+    <!--
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.26</version>
+    </dependency>
+    -->
+
 
     <dependency>
       <groupId>junit</groupId>
