退回版本SpringBoot-2.3.10.RELEASE, SpringCloud-Hoxton.SR11

--- a/file-system-service/src/main/resources/bootstrap.yml
+++ b/file-system-service/src/main/resources/bootstrap.yml
@@ -1,11 +1,12 @@
 spring:
   application:
     name: filesystemservice
-#  profiles:
-#    active: default
-#  cloud:
-#    config:
-#      uri: http://localhost:8000
-#      name: ${spring.application.name}
-#      profile: ${spring.profiles.active}
-#      label: master
+  profiles:
+    active: default
+  cloud:
+    config:
+      uri: http://localhost:8000
+      name: ${spring.application.name}
+      profile: ${spring.profiles.active}
+      label: master
+      enabled: false
