--- a/file-system-service/pom.xml
+++ b/file-system-service/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.5</version>
+    <version>2.3.10.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -24,7 +24,7 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>2020.0.1</version>
+        <version>Hoxton.SR11</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -59,10 +59,10 @@
     </dependency>
 
     <!--Spring Cloud2020 需要引入该jar才能使bootstrap配置文件生效-->
-    <dependency>
+    <!-- <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-bootstrap</artifactId>
-    </dependency>
+    </dependency> -->
 
     <dependency>
       <groupId>org.springframework.cloud</groupId>
@@ -91,7 +91,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>2.4.5</version>
+        <version>2.3.10.RELEASE</version>
       </plugin>
     </plugins>
   </build>
