--- a/file-system-service/src/main/resources/application.yml
+++ b/file-system-service/src/main/resources/application.yml
@@ -25,3 +25,13 @@ management:
   endpoint:
     shutdown:
       enabled: true     # get请求不行，post可以
+
+# Eureka 服务发现
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
