--- a/zuulsvr/src/main/resources/application.yml
+++ b/zuulsvr/src/main/resources/application.yml
@@ -26,6 +26,7 @@ zuul:
   routes:
     userservice: /user/**
     filesystemservice: /filesystem/**
+    authenticationservice: /auth/**
   ignored-services: "*"
   prefix: /api
 # Zuul 超时配置
