--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -40,3 +40,14 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+# Spring Security
+security:
+  oauth2:
+    resource:
+      user-info-uri: http://localhost:8901/auth/user
+
+# JWT 令牌密钥
+jwt:
+  signing:
+    key: "345345fsdgsf5345"
