--- a/file-system-service/pom.xml
+++ b/file-system-service/pom.xml
@@ -64,11 +64,23 @@
       <artifactId>spring-cloud-starter-bootstrap</artifactId>
     </dependency> -->
 
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.cloud</groupId>-->
+<!--      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+<!--    </dependency>-->
+
+
     <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+      <artifactId>spring-cloud-starter-sleuth</artifactId>
+      <version>2.2.8.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+      <version>2.2.8.RELEASE</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
