--- a/file-system-service/src/main/resources/application.yml
+++ b/file-system-service/src/main/resources/application.yml
@@ -7,6 +7,14 @@ spring:
   data:
     mongodb:
       uri: mongodb://admin:1214@ping.qixqi.cn:27017/pan?authSource=admin
+  # Spring Sleuth & Zipkin
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0    # 跟踪全部事务
+
+
 # 是否初始化 mongodb
 # TODO: 初始化时，删除以前的数据
 db:
@@ -35,3 +43,8 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+# 设置日志级别
+logging:
+  level:
+    cn.qixqi.pan: DEBUG
