--- a/test-service/pom.xml
+++ b/test-service/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.qixqi.pan</groupId>
-    <artifactId>authentication-service</artifactId>
+    <artifactId>test-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>authentication-service</name>
+    <name>test-service</name>
     <description>Authentication Service</description>
 
     <!-- 父依赖 -->
@@ -86,6 +86,18 @@
         <dependency>
             <groupId>org.springframework.security.oauth.boot</groupId>
             <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <version>2.2.8.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+            <version>2.2.8.RELEASE</version>
         </dependency>
 
         <dependency>
