--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 <!--        <module>zuulsvr</module>-->
         <module>user-service</module>
         <module>file-system-service</module>
+        <module>filesharing-service</module>
 <!--        <module>test-service</module>-->
     </modules>
 
