--- a/filesharing-service/src/main/resources/application.yml
+++ b/filesharing-service/src/main/resources/application.yml
@@ -20,6 +20,15 @@ spring:
           required-acks: 1
 
 
+# Eureka 服务发现
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
 
 # Spring Actuator
