--- a/file-system-service/pom.xml
+++ b/file-system-service/pom.xml
@@ -104,6 +104,7 @@
       <version>3.3.0</version>
     </dependency>
 
+    <!-- 连接池 -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-pool2</artifactId>
