--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <!-- 导入模块服务，模块以 jar方式打包 -->
     <modules>
-<!--        <module>confsvr</module>-->
+        <module>confsvr</module>
         <module>eurekasvr</module>
 <!--        <module>authentication-service</module>-->
 <!--        <module>zipkinsvr</module>-->
