--- a/confsvr/pom.xml
+++ b/confsvr/pom.xml
@@ -34,6 +34,13 @@
 
   <!-- 引入所需依赖 -->
   <dependencies>
+
+    <!-- Spring Actuator 提供开箱即用的运维端点 -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-config</artifactId>
