--- a/confsvr/src/main/resources/application.yml
+++ b/confsvr/src/main/resources/application.yml
@@ -6,6 +6,16 @@ spring:
       server:
         git:
           uri: https://gitee.com/QIXQI/config-repo/
-          search-paths: userservice, testservice, filesystemservice
+          search-paths: userservice, testservice, filesystemservice, eurekasvr
           # username:         # 私有库
           # password:         # 私有库
+
+# Spring Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"    # 暴露所有端点
+  endpoint:
+    shutdown:
+      enabled: true     # get请求不行，post可以
