--- a/eurekasvr/pom.xml
+++ b/eurekasvr/pom.xml
@@ -32,9 +32,26 @@
   </dependencyManagement>
 
   <dependencies>
+
+    <!-- Spring Actuator 提供开箱即用的运维端点 -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-config-client</artifactId>
     </dependency>
 
     <!--Spring Cloud2020 需要引入该jar才能使bootstrap配置文件生效-->
