创建子仓库zuulsvr

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <module>eurekasvr</module>
 <!--        <module>authentication-service</module>-->
 <!--        <module>zipkinsvr</module>-->
-<!--        <module>zuulsvr</module>-->
+        <module>zuulsvr</module>
 <!--        <module>user-service</module>-->
         <module>file-system-service</module>
         <module>filesharing-service</module>
