--- a/zuulsvr/pom.xml
+++ b/zuulsvr/pom.xml
@@ -48,6 +48,16 @@
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-config-client</artifactId>
+    </dependency>
+
     <!-- JWT解析器库 -->
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
