--- a/zuulsvr/src/main/resources/bootstrap.yml
+++ b/zuulsvr/src/main/resources/bootstrap.yml
@@ -1,13 +1,12 @@
 spring:
   application:
     name: zuulsvr
-  # Spring Cloud Config
   profiles:
     active: default
   cloud:
     config:
-      uri: http://localhost:8000
+      uri: http://ali6.qixqi.cn:8000
       name: ${spring.application.name}
       profile: ${spring.profiles.active}
       label: master
-      enabled: false
+      enabled: true
