--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,14 @@
 
     <!-- 导入模块服务，模块以 jar方式打包 -->
     <modules>
-        <module>confsvr</module>
-        <module>eurekasvr</module>
+<!--        <module>confsvr</module>-->
+<!--        <module>eurekasvr</module>-->
 <!--        <module>authentication-service</module>-->
-<!--        <module>zipkinsvr</module>-->
-        <module>zuulsvr</module>
+        <module>zipkinsvr</module>
+<!--        <module>zuulsvr</module>-->
 <!--        <module>user-service</module>-->
-        <module>file-system-service</module>
-        <module>filesharing-service</module>
+<!--        <module>file-system-service</module>-->
+<!--        <module>filesharing-service</module>-->
 <!--        <module>test-service</module>-->
     </modules>
 
