--- a/zipkinsvr/pom.xml
+++ b/zipkinsvr/pom.xml
@@ -72,6 +72,17 @@
       <artifactId>spring-cloud-context</artifactId>
     </dependency>
 
+    <!-- 加上报错：java.lang.NoClassDefFoundError: org/springframework/boot/actuate/health/CompositeHealthContributor -->
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.cloud</groupId>-->
+<!--      <artifactId>spring-cloud-starter-config</artifactId>-->
+<!--    </dependency>-->
+
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.cloud</groupId>-->
+<!--      <artifactId>spring-cloud-config-client</artifactId>-->
+<!--    </dependency>-->
+
     <dependency>
       <groupId>io.zipkin.java</groupId>
       <artifactId>zipkin-server</artifactId>
