--- a/zipkinsvr/src/main/resources/application.yml
+++ b/zipkinsvr/src/main/resources/application.yml
@@ -7,3 +7,12 @@ management:
     web:
       server:
         auto-time-requests: false
+  # Spring Actuator
+  endpoints:
+    web:
+      exposure:
+        include: "*"    # 暴露所有端点
+  endpoint:
+    shutdown:
+      enabled: true     # get请求不行，post可以
+
