--- a/zipkinsvr/src/main/resources/bootstrap.yml
+++ b/zipkinsvr/src/main/resources/bootstrap.yml
@@ -1,3 +1,12 @@
 spring:
   application:
     name: zipkinsvr
+#  profiles:
+#    active: default
+#  cloud:
+#    config:
+#      uri: http://ali6.qixqi.cn:8000
+#      name: ${spring.application.name}
+#      profile: ${spring.profiles.active}
+#      label: master
+#      enabled: false
