--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -92,6 +92,17 @@
       <version>2.2.8.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.23</version>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
