--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
 <!--        <module>eurekasvr</module>-->
         <module>authentication-service</module>
 <!--        <module>zipkinsvr</module>-->
-<!--        <module>zuulsvr</module>-->
-        <module>user-service</module>
+        <module>zuulsvr</module>
+<!--        <module>user-service</module>-->
         <module>file-system-service</module>
 <!--        <module>filesharing-service</module>-->
 <!--        <module>test-service</module>-->
