--- a/file-system-service/pom.xml
+++ b/file-system-service/pom.xml
@@ -70,17 +70,17 @@
     </dependency>
 
 
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.cloud</groupId>-->
-<!--      <artifactId>spring-cloud-starter-sleuth</artifactId>-->
-<!--      <version>2.2.8.RELEASE</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-sleuth</artifactId>
+      <version>2.2.8.RELEASE</version>
+    </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.cloud</groupId>-->
-<!--      <artifactId>spring-cloud-sleuth-zipkin</artifactId>-->
-<!--      <version>2.2.8.RELEASE</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+      <version>2.2.8.RELEASE</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.cloud</groupId>
@@ -120,6 +120,22 @@
       <groupId>com.netflix.hystrix</groupId>
       <artifactId>hystrix-javanica</artifactId>
       <version>1.5.18</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-oauth2</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security.oauth.boot</groupId>
+      <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-jwt</artifactId>
+      <version>1.0.9.RELEASE</version>
     </dependency>
 
     <dependency>
