--- a/zuulsvr/pom.xml
+++ b/zuulsvr/pom.xml
@@ -58,6 +58,16 @@
       <artifactId>spring-cloud-config-client</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-sleuth</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+    </dependency>
+
     <!-- JWT解析器库 -->
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
